syntax = "proto3";

package util.lock;

import "models/util/lock/node_state.proto";
import "requests/util/lock/lock_request.proto";

option java_multiple_files = true;
option java_package = "common.request.lock";
option java_outer_classname = "LockResponseProtos";

message LockResponseProto {
  string object_class = 1;
  string version = 2;

  util.lock.LockRequestProto create_lock_request = 3;

  util.lock.NodeStateProto lock_response = 4;
}


